--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pdfjs-dist": "^5.4.530",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-easy-crop": "^5.5.6",
     "tesseract.js": "^7.0.0"
   },
   "devDependencies": {
