--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@imgly/background-removal": "^1.7.0",
+    "@imgly/background-removal-node": "^1.4.5",
+    "axios": "^1.13.4",
+    "canvas": "^3.2.1",
+    "jsdom": "^27.0.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
     "pdf-lib": "^1.17.1",
@@ -17,6 +21,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-easy-crop": "^5.5.6",
+    "react-toastify": "^11.0.5",
     "tesseract.js": "^7.0.0"
   },
   "devDependencies": {
